less: Prevent horizontal scrollbars on post containers

--- a/less/posts.mix.less
+++ b/less/posts.mix.less
@@ -38,7 +38,7 @@ article {
 	}
 	.post-container {
 		width: 100%;
-		overflow-y: hidden; // Prevents vertical zalgo
+		overflow: hidden; // Prevents vertical zalgo
 	}
 	article .post-container {
 		width: initial;
